@@ -464,9 +464,10 @@ of MediaWiki:Newpagetext) to &action=edit, if page is new.
 * (bug 923) Fix title and subtitle for rclinked special page
 * (bug 2642) watchdetails message in several languages used  <a></a> instead of [ ]
 * (bug 2181) basic CSB language localisation by Tomasz G. Sienicki (thanks for the patch)
-* (bug 2632) also adjust height when zooming an image by giving only width
 * Fix correct use of escaping in edit toolbar bits
 * Removed language conversion support from Icelandic
+* (bug 2632) Fix proportional image scaling, giving correct height
+* (bug 2640) Include width and height attributes on unscaled images
 
 
 === Caveats ===
